--- a/pig-latin.html
+++ b/pig-latin.html
@@ -9,20 +9,23 @@
   </head>
   <body>
     <div class="container">
-      <h1>Pig Latin Translator</h1>
-
-      <form id="translator">
-        <div class="form-group">
-          <label for="phrase">Enter a phrase to see the translation:</label>
-          <input id="phrase" type="text">
+      <div class="row">
+        <div class="col-sm-5">
+          <h1>Pig Latin Translator</h1>
+            <div class="jumbotron">
+              <form id="translator">
+                  <div class="form-group">
+                    <label for="phrase">Enter phrase here:</label>
+                    <input id="phrase" type="text">
+                  </div>
+                <button type="submit" class="btn">submit</button>
+            </form>
+            <h6 id="result"><span class="phraseResult"></span></h6>
+          </div>
+          </div>
         </div>
-
-        <button type="submit" class="btn">submit</button>
-      </form>
-
-      <div id="result">
-        <p><span class="phrase"></span></p>
       </div>
     </div>
+
   </body>
 </html>
